new yolo changes

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-
+  <script async src="https://www.googletagmanager.com/gtag/js"></script>
   <title>PSE Image</title>
 </head>
 
@@ -18,6 +18,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+
 
   <script src="https://cdn.rawgit.com/oliver-moran/jimp/v0.2.27/browser/lib/jimp.min.js"></script>
   <!-- <script src="https://raw.githubusercontent.com/oliver-moran/jimp/master/browser/lib/jimp.min.js"></script> -->
